# number-utils-rs

./: Cargo.toml  README.md
number-utils/: Cargo.toml  README.md
number-utils/src/: bigint.rs  lib.rs  macros.rs  number_utils.rs  test.rs
prime-number-utils/: Cargo.toml  README.md
prime-number-utils/src/: baillie_psw.rs  bigint.rs  bitwise_sieve.rs  gen_prime.rs  lib.rs  linear_sieve.rs  segmented_sieve.rs  sieve_of_atkin.rs  sieve_of_eratosthenes.rs  sieve_of_sundaram.rs  test.rs
